Add further gazelle:resolve directives to deal with dep cycles

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -110,10 +110,20 @@ go_deps.gazelle_default_attributes(
         # and they trip up rules_go, so we disable them by default
         "gazelle:proto disable",
         # Resolve dependencies that depend back on this same repo (cyclical deps) to references to this repo
+        "gazelle:resolve go github.com/DataDog/datadog-agent/comp/core/config @@//comp/core/config",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/comp/core/log/def @@//comp/core/log/def",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/comp/forwarder/defaultforwarder @@//comp/forwarder/defaultforwarder",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/comp/logs/agent/config @@//comp/logs/agent/config",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/config/model @@//pkg/config/model",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/config/setup @@//pkg/config/setup",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/config/utils @@//pkg/config/utils",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/config/viperconfig @@//pkg/config/viperconfig",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/proto/pbgo/trace @@//pkg/proto/pbgo/trace",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/obfuscate @@//pkg/obfuscate",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/remoteconfig/state @@//pkg/remoteconfig/state",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/serializer @@//pkg/serializer",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/trace/stats @@//pkg/trace/stats",
+        "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/util/compression/impl-zlib @@//pkg/util/compression/impl-zlib",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/util/hostname/validate @@//pkg/util/hostname/validate",
         "gazelle:resolve go github.com/DataDog/datadog-agent/pkg/trace/log @@//pkg/trace/log",
     ],
