--- a/.gitlab/functional_test/regression_detector.yml
+++ b/.gitlab/functional_test/regression_detector.yml
@@ -154,6 +154,7 @@ single-machine-performance-regression_detector:
       --comparison-sha ${CI_COMMIT_SHA} \
       --target-config-dir test/regression/ \
       --submission-metadata submission_metadata \
+      --replicas 1 \
       --tags ${SMP_TAGS} || {
         exit_code=$?
         echo "smp job submit command failed with code $exit_code"
